--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,7 +16,42 @@
         android:theme="@style/Theme.ProyectoR"
         tools:targetApi="31" >
         <activity
-            android:name=".FormProducto"
+            android:name=".proba"
+            android:exported="false" >
+            <meta-data
+                android:name="android.app.lib_name"
+                android:value="" />
+        </activity>
+        <activity
+            android:name=".ListAlergenos"
+            android:exported="false" >
+            <meta-data
+                android:name="android.app.lib_name"
+                android:value="" />
+        </activity>
+        <activity
+            android:name="com.example.Forms.FormCarta"
+            android:exported="false" >
+            <meta-data
+                android:name="android.app.lib_name"
+                android:value="" />
+        </activity>
+        <activity
+            android:name="com.example.Forms.FormDepartamento"
+            android:exported="false" >
+            <meta-data
+                android:name="android.app.lib_name"
+                android:value="" />
+        </activity>
+        <activity
+            android:name="com.example.Forms.FormAlergenos"
+            android:exported="false" >
+            <meta-data
+                android:name="android.app.lib_name"
+                android:value="" />
+        </activity>
+        <activity
+            android:name="com.example.Forms.FormProducto"
             android:exported="false" >
             <meta-data
                 android:name="android.app.lib_name"
@@ -37,7 +72,7 @@
                 android:value="" />
         </activity>
         <activity
-            android:name=".FormUser"
+            android:name="com.example.Forms.FormUser"
             android:exported="false"
             android:parentActivityName=".MainActivity" >
             <meta-data
