--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,14 +16,7 @@
         android:theme="@style/Theme.ProyectoR"
         tools:targetApi="31" >
         <activity
-            android:name=".proba"
-            android:exported="false" >
-            <meta-data
-                android:name="android.app.lib_name"
-                android:value="" />
-        </activity>
-        <activity
-            android:name=".ListAlergenos"
+            android:name="com.example.Lists.ListAlergenos"
             android:exported="false" >
             <meta-data
                 android:name="android.app.lib_name"
@@ -58,7 +51,7 @@
                 android:value="" />
         </activity>
         <activity
-            android:name=".ListCarta"
+            android:name="com.example.Lists.ListCarta"
             android:exported="false" >
             <meta-data
                 android:name="android.app.lib_name"
