--- a/app/build.gradle
+++ b/app/build.gradle
@@ -9,10 +9,12 @@ android {
 
     defaultConfig {
         applicationId "com.example.proyector"
-        minSdk 23
+        minSdk 33
         targetSdk 33
         versionCode 1
         versionName "1.0"
+
+        minSdkVersion 24
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
