Clases POJO/Forms 'mesas'

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -30,6 +30,13 @@
                 android:value="" />
         </activity>
         <activity
+            android:name="com.example.Lists.ListMesa"
+            android:exported="false" >
+            <meta-data
+                android:name="android.app.lib_name"
+                android:value="" />
+        </activity>
+        <activity
             android:name="com.example.Forms.FormCarta"
             android:exported="false" >
             <meta-data
@@ -52,6 +59,13 @@
         </activity>
         <activity
             android:name="com.example.Forms.FormRestaurante"
+            android:exported="false" >
+            <meta-data
+                android:name="android.app.lib_name"
+                android:value="" />
+        </activity>
+        <activity
+            android:name="com.example.Forms.FormMesa"
             android:exported="false" >
             <meta-data
                 android:name="android.app.lib_name"
