--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -26,6 +26,13 @@
                 android:value="" />
         </activity>
         <activity
+            android:name="com.example.Lists.CardViewGestionComandas"
+            android:exported="false">
+            <meta-data
+                android:name="android.app.lib_name"
+                android:value="" />
+        </activity>
+        <activity
             android:name="com.example.Lists.ListAlergenos"
             android:exported="false">
             <meta-data
