-Pantalla de Login y Registro -Se agrega material.io a formularios, listas etc (restaurantes y mesas) -Se agregan algunas mejoras en cuanto a la gestion de comandas (aun no terminada)

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -103,7 +103,7 @@
                 android:value="" />
         </activity>
         <activity
-            android:name="com.example.Forms.FormUser"
+            android:name=".LoginUser"
             android:exported="false"
             android:parentActivityName=".MainActivity">
             <meta-data
@@ -111,7 +111,15 @@
                 android:value="" />
         </activity>
         <activity
-            android:name=".LoginUser"
+            android:name=".LoginActivity"
+            android:exported="false"
+            android:parentActivityName=".MainActivity">
+            <meta-data
+                android:name="android.app.lib_name"
+                android:value="" />
+        </activity>
+        <activity
+            android:name=".RegistroActivity"
             android:exported="false"
             android:parentActivityName=".MainActivity">
             <meta-data
