reasignacion path carta a restaurante correspondiente

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,13 +13,14 @@
         android:dataExtractionRules="@xml/data_extraction_rules"
         android:fullBackupContent="@xml/backup_rules"
         android:icon="@mipmap/ic_launcher"
-        android:label="@string/app_name"
+        android:label="Carta-Click"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.ProyectoR"
         tools:targetApi="31">
         <activity
             android:name=".FormAdmin"
+            android:parentActivityName=".LoginActivity"
             android:exported="false">
             <meta-data
                 android:name="android.app.lib_name"
@@ -104,6 +105,7 @@
         </activity>
         <activity
             android:name="com.example.Forms.FormCarta"
+            android:parentActivityName=".FormAdmin"
             android:exported="false">
             <meta-data
                 android:name="android.app.lib_name"
@@ -111,6 +113,7 @@
         </activity>
         <activity
             android:name="com.example.Forms.FormDepartamento"
+            android:parentActivityName="com.example.Forms.FormCarta"
             android:exported="false">
             <meta-data
                 android:name="android.app.lib_name"
@@ -139,6 +142,7 @@
         </activity>
         <activity
             android:name="com.example.Forms.FormProducto"
+            android:parentActivityName="com.example.Forms.FormDepartamento"
             android:exported="false">
             <meta-data
                 android:name="android.app.lib_name"
