--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -90,6 +90,13 @@
                 android:value="" />
         </activity>
         <activity
+            android:name="com.example.Lists.ListUsuarios"
+            android:exported="false">
+            <meta-data
+                android:name="android.app.lib_name"
+                android:value="" />
+        </activity>
+        <activity
             android:name="com.example.Lists.ListRestaurante"
             android:exported="false">
             <meta-data
