--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,7 +20,7 @@
         tools:targetApi="31">
         <activity
             android:name=".FormAdmin"
-            android:parentActivityName=".LoginActivity"
+            android:parentActivityName=".MainActivity"
             android:exported="false">
             <meta-data
                 android:name="android.app.lib_name"
@@ -128,6 +128,7 @@
         </activity>
         <activity
             android:name="com.example.Forms.FormAlergenos"
+            android:parentActivityName=".FormAdmin"
             android:exported="false">
             <meta-data
                 android:name="android.app.lib_name"
